monkey_parser/MonkeyParser.cpp

// Generated from MonkeyParser.g4 by ANTLR 4.9.2


#include "MonkeyParserVisitor.h"

#include "MonkeyParser.h"


using namespace antlrcpp;
using namespace antlr4;

MonkeyParser::MonkeyParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MonkeyParser::~MonkeyParser() {
  delete _interpreter;
}

std::string MonkeyParser::getGrammarFileName() const {
  return "MonkeyParser.g4";
}

const std::vector<std::string>& MonkeyParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MonkeyParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

MonkeyParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MonkeyParser::ProgramContext::EOF() {
  return getToken(MonkeyParser::EOF, 0);
}

std::vector<MonkeyParser::StatementContext *> MonkeyParser::ProgramContext::statement() {
  return getRuleContexts<MonkeyParser::StatementContext>();
}

MonkeyParser::StatementContext* MonkeyParser::ProgramContext::statement(size_t i) {
  return getRuleContext<MonkeyParser::StatementContext>(i);
}


size_t MonkeyParser::ProgramContext::getRuleIndex() const {
  return MonkeyParser::RuleProgram;
}


antlrcpp::Any MonkeyParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::ProgramContext* MonkeyParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MonkeyParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(62);
      statement();
      setState(65); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MonkeyParser::FUNCTION)
      | (1ULL << MonkeyParser::LET)
      | (1ULL << MonkeyParser::TRUE)
      | (1ULL << MonkeyParser::FALSE)
      | (1ULL << MonkeyParser::IF)
      | (1ULL << MonkeyParser::RETURN)
      | (1ULL << MonkeyParser::IDENT)
      | (1ULL << MonkeyParser::INTEGER)
      | (1ULL << MonkeyParser::STRING)
      | (1ULL << MonkeyParser::MINUS)
      | (1ULL << MonkeyParser::BANG)
      | (1ULL << MonkeyParser::LPAREN)
      | (1ULL << MonkeyParser::LBRACE)
      | (1ULL << MonkeyParser::LBRACKET))) != 0));
    setState(67);
    match(MonkeyParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MonkeyParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MonkeyParser::BlockStatementContext* MonkeyParser::StatementContext::blockStatement() {
  return getRuleContext<MonkeyParser::BlockStatementContext>(0);
}

MonkeyParser::ExpressionStatementContext* MonkeyParser::StatementContext::expressionStatement() {
  return getRuleContext<MonkeyParser::ExpressionStatementContext>(0);
}

MonkeyParser::LetStatementContext* MonkeyParser::StatementContext::letStatement() {
  return getRuleContext<MonkeyParser::LetStatementContext>(0);
}

MonkeyParser::ReturnStatementContext* MonkeyParser::StatementContext::returnStatement() {
  return getRuleContext<MonkeyParser::ReturnStatementContext>(0);
}


size_t MonkeyParser::StatementContext::getRuleIndex() const {
  return MonkeyParser::RuleStatement;
}


antlrcpp::Any MonkeyParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::StatementContext* MonkeyParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MonkeyParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(69);
      blockStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(70);
      expressionStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(71);
      letStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(72);
      returnStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockStatementContext ------------------------------------------------------------------

MonkeyParser::BlockStatementContext::BlockStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MonkeyParser::BlockStatementContext::LBRACE() {
  return getToken(MonkeyParser::LBRACE, 0);
}

tree::TerminalNode* MonkeyParser::BlockStatementContext::RBRACE() {
  return getToken(MonkeyParser::RBRACE, 0);
}

std::vector<MonkeyParser::StatementContext *> MonkeyParser::BlockStatementContext::statement() {
  return getRuleContexts<MonkeyParser::StatementContext>();
}

MonkeyParser::StatementContext* MonkeyParser::BlockStatementContext::statement(size_t i) {
  return getRuleContext<MonkeyParser::StatementContext>(i);
}


size_t MonkeyParser::BlockStatementContext::getRuleIndex() const {
  return MonkeyParser::RuleBlockStatement;
}


antlrcpp::Any MonkeyParser::BlockStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitBlockStatement(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::BlockStatementContext* MonkeyParser::blockStatement() {
  BlockStatementContext *_localctx = _tracker.createInstance<BlockStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, MonkeyParser::RuleBlockStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(MonkeyParser::LBRACE);
    setState(77); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(76);
      statement();
      setState(79); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MonkeyParser::FUNCTION)
      | (1ULL << MonkeyParser::LET)
      | (1ULL << MonkeyParser::TRUE)
      | (1ULL << MonkeyParser::FALSE)
      | (1ULL << MonkeyParser::IF)
      | (1ULL << MonkeyParser::RETURN)
      | (1ULL << MonkeyParser::IDENT)
      | (1ULL << MonkeyParser::INTEGER)
      | (1ULL << MonkeyParser::STRING)
      | (1ULL << MonkeyParser::MINUS)
      | (1ULL << MonkeyParser::BANG)
      | (1ULL << MonkeyParser::LPAREN)
      | (1ULL << MonkeyParser::LBRACE)
      | (1ULL << MonkeyParser::LBRACKET))) != 0));
    setState(81);
    match(MonkeyParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionStatementContext ------------------------------------------------------------------

MonkeyParser::ExpressionStatementContext::ExpressionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MonkeyParser::ExpressionContext* MonkeyParser::ExpressionStatementContext::expression() {
  return getRuleContext<MonkeyParser::ExpressionContext>(0);
}

tree::TerminalNode* MonkeyParser::ExpressionStatementContext::SEMICOLON() {
  return getToken(MonkeyParser::SEMICOLON, 0);
}


size_t MonkeyParser::ExpressionStatementContext::getRuleIndex() const {
  return MonkeyParser::RuleExpressionStatement;
}


antlrcpp::Any MonkeyParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::ExpressionStatementContext* MonkeyParser::expressionStatement() {
  ExpressionStatementContext *_localctx = _tracker.createInstance<ExpressionStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, MonkeyParser::RuleExpressionStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    expression();
    setState(84);
    match(MonkeyParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LetStatementContext ------------------------------------------------------------------

MonkeyParser::LetStatementContext::LetStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MonkeyParser::LetStatementContext::LET() {
  return getToken(MonkeyParser::LET, 0);
}

MonkeyParser::IdentifierContext* MonkeyParser::LetStatementContext::identifier() {
  return getRuleContext<MonkeyParser::IdentifierContext>(0);
}

tree::TerminalNode* MonkeyParser::LetStatementContext::EQ() {
  return getToken(MonkeyParser::EQ, 0);
}

MonkeyParser::ExpressionContext* MonkeyParser::LetStatementContext::expression() {
  return getRuleContext<MonkeyParser::ExpressionContext>(0);
}

tree::TerminalNode* MonkeyParser::LetStatementContext::SEMICOLON() {
  return getToken(MonkeyParser::SEMICOLON, 0);
}


size_t MonkeyParser::LetStatementContext::getRuleIndex() const {
  return MonkeyParser::RuleLetStatement;
}


antlrcpp::Any MonkeyParser::LetStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitLetStatement(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::LetStatementContext* MonkeyParser::letStatement() {
  LetStatementContext *_localctx = _tracker.createInstance<LetStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, MonkeyParser::RuleLetStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(MonkeyParser::LET);
    setState(87);
    identifier();
    setState(88);
    match(MonkeyParser::EQ);
    setState(89);
    expression();
    setState(90);
    match(MonkeyParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStatementContext ------------------------------------------------------------------

MonkeyParser::ReturnStatementContext::ReturnStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MonkeyParser::ReturnStatementContext::RETURN() {
  return getToken(MonkeyParser::RETURN, 0);
}

MonkeyParser::ExpressionContext* MonkeyParser::ReturnStatementContext::expression() {
  return getRuleContext<MonkeyParser::ExpressionContext>(0);
}

tree::TerminalNode* MonkeyParser::ReturnStatementContext::SEMICOLON() {
  return getToken(MonkeyParser::SEMICOLON, 0);
}


size_t MonkeyParser::ReturnStatementContext::getRuleIndex() const {
  return MonkeyParser::RuleReturnStatement;
}


antlrcpp::Any MonkeyParser::ReturnStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitReturnStatement(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::ReturnStatementContext* MonkeyParser::returnStatement() {
  ReturnStatementContext *_localctx = _tracker.createInstance<ReturnStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, MonkeyParser::RuleReturnStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(MonkeyParser::RETURN);
    setState(93);
    expression();
    setState(94);
    match(MonkeyParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionListContext ------------------------------------------------------------------

MonkeyParser::ExpressionListContext::ExpressionListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MonkeyParser::ExpressionContext *> MonkeyParser::ExpressionListContext::expression() {
  return getRuleContexts<MonkeyParser::ExpressionContext>();
}

MonkeyParser::ExpressionContext* MonkeyParser::ExpressionListContext::expression(size_t i) {
  return getRuleContext<MonkeyParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> MonkeyParser::ExpressionListContext::COMMA() {
  return getTokens(MonkeyParser::COMMA);
}

tree::TerminalNode* MonkeyParser::ExpressionListContext::COMMA(size_t i) {
  return getToken(MonkeyParser::COMMA, i);
}


size_t MonkeyParser::ExpressionListContext::getRuleIndex() const {
  return MonkeyParser::RuleExpressionList;
}


antlrcpp::Any MonkeyParser::ExpressionListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitExpressionList(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::ExpressionListContext* MonkeyParser::expressionList() {
  ExpressionListContext *_localctx = _tracker.createInstance<ExpressionListContext>(_ctx, getState());
  enterRule(_localctx, 12, MonkeyParser::RuleExpressionList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    expression();
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MonkeyParser::COMMA) {
      setState(97);
      match(MonkeyParser::COMMA);
      setState(98);
      expression();
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

MonkeyParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MonkeyParser::BinaryExpressionContext* MonkeyParser::ExpressionContext::binaryExpression() {
  return getRuleContext<MonkeyParser::BinaryExpressionContext>(0);
}


size_t MonkeyParser::ExpressionContext::getRuleIndex() const {
  return MonkeyParser::RuleExpression;
}


antlrcpp::Any MonkeyParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::ExpressionContext* MonkeyParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 14, MonkeyParser::RuleExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    binaryExpression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BinaryExpressionContext ------------------------------------------------------------------

MonkeyParser::BinaryExpressionContext::BinaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MonkeyParser::PrefixExpressionContext* MonkeyParser::BinaryExpressionContext::prefixExpression() {
  return getRuleContext<MonkeyParser::PrefixExpressionContext>(0);
}

std::vector<MonkeyParser::BinaryExpressionContext *> MonkeyParser::BinaryExpressionContext::binaryExpression() {
  return getRuleContexts<MonkeyParser::BinaryExpressionContext>();
}

MonkeyParser::BinaryExpressionContext* MonkeyParser::BinaryExpressionContext::binaryExpression(size_t i) {
  return getRuleContext<MonkeyParser::BinaryExpressionContext>(i);
}

MonkeyParser::FactorOperatorContext* MonkeyParser::BinaryExpressionContext::factorOperator() {
  return getRuleContext<MonkeyParser::FactorOperatorContext>(0);
}

MonkeyParser::TermOperatorContext* MonkeyParser::BinaryExpressionContext::termOperator() {
  return getRuleContext<MonkeyParser::TermOperatorContext>(0);
}

MonkeyParser::RelOperatorContext* MonkeyParser::BinaryExpressionContext::relOperator() {
  return getRuleContext<MonkeyParser::RelOperatorContext>(0);
}

MonkeyParser::EqualOperatorContext* MonkeyParser::BinaryExpressionContext::equalOperator() {
  return getRuleContext<MonkeyParser::EqualOperatorContext>(0);
}


size_t MonkeyParser::BinaryExpressionContext::getRuleIndex() const {
  return MonkeyParser::RuleBinaryExpression;
}


antlrcpp::Any MonkeyParser::BinaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitBinaryExpression(this);
  else
    return visitor->visitChildren(this);
}


MonkeyParser::BinaryExpressionContext* MonkeyParser::binaryExpression() {
   return binaryExpression(0);
}

MonkeyParser::BinaryExpressionContext* MonkeyParser::binaryExpression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  MonkeyParser::BinaryExpressionContext *_localctx = _tracker.createInstance<BinaryExpressionContext>(_ctx, parentState);
  MonkeyParser::BinaryExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 16;
  enterRecursionRule(_localctx, 16, MonkeyParser::RuleBinaryExpression, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(107);
    prefixExpression();
    _ctx->stop = _input->LT(-1);
    setState(127);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(125);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<BinaryExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleBinaryExpression);
          setState(109);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(110);
          factorOperator();
          setState(111);
          binaryExpression(5);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<BinaryExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleBinaryExpression);
          setState(113);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(114);
          termOperator();
          setState(115);
          binaryExpression(4);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<BinaryExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleBinaryExpression);
          setState(117);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(118);
          relOperator();
          setState(119);
          binaryExpression(3);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<BinaryExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleBinaryExpression);
          setState(121);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(122);
          equalOperator();
          setState(123);
          binaryExpression(2);
          break;
        }

        default:
          break;
        } 
      }
      setState(129);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- EqualOperatorContext ------------------------------------------------------------------

MonkeyParser::EqualOperatorContext::EqualOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MonkeyParser::EqualOperatorContext::EQ_EQ() {
  return getToken(MonkeyParser::EQ_EQ, 0);
}

tree::TerminalNode* MonkeyParser::EqualOperatorContext::BANG_EQ() {
  return getToken(MonkeyParser::BANG_EQ, 0);
}


size_t MonkeyParser::EqualOperatorContext::getRuleIndex() const {
  return MonkeyParser::RuleEqualOperator;
}


antlrcpp::Any MonkeyParser::EqualOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitEqualOperator(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::EqualOperatorContext* MonkeyParser::equalOperator() {
  EqualOperatorContext *_localctx = _tracker.createInstance<EqualOperatorContext>(_ctx, getState());
  enterRule(_localctx, 18, MonkeyParser::RuleEqualOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    _la = _input->LA(1);
    if (!(_la == MonkeyParser::EQ_EQ

    || _la == MonkeyParser::BANG_EQ)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RelOperatorContext ------------------------------------------------------------------

MonkeyParser::RelOperatorContext::RelOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MonkeyParser::RelOperatorContext::LT() {
  return getToken(MonkeyParser::LT, 0);
}

tree::TerminalNode* MonkeyParser::RelOperatorContext::GT() {
  return getToken(MonkeyParser::GT, 0);
}


size_t MonkeyParser::RelOperatorContext::getRuleIndex() const {
  return MonkeyParser::RuleRelOperator;
}


antlrcpp::Any MonkeyParser::RelOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitRelOperator(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::RelOperatorContext* MonkeyParser::relOperator() {
  RelOperatorContext *_localctx = _tracker.createInstance<RelOperatorContext>(_ctx, getState());
  enterRule(_localctx, 20, MonkeyParser::RuleRelOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    _la = _input->LA(1);
    if (!(_la == MonkeyParser::GT

    || _la == MonkeyParser::LT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TermOperatorContext ------------------------------------------------------------------

MonkeyParser::TermOperatorContext::TermOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MonkeyParser::TermOperatorContext::PLUS() {
  return getToken(MonkeyParser::PLUS, 0);
}

tree::TerminalNode* MonkeyParser::TermOperatorContext::MINUS() {
  return getToken(MonkeyParser::MINUS, 0);
}


size_t MonkeyParser::TermOperatorContext::getRuleIndex() const {
  return MonkeyParser::RuleTermOperator;
}


antlrcpp::Any MonkeyParser::TermOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitTermOperator(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::TermOperatorContext* MonkeyParser::termOperator() {
  TermOperatorContext *_localctx = _tracker.createInstance<TermOperatorContext>(_ctx, getState());
  enterRule(_localctx, 22, MonkeyParser::RuleTermOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    _la = _input->LA(1);
    if (!(_la == MonkeyParser::PLUS

    || _la == MonkeyParser::MINUS)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FactorOperatorContext ------------------------------------------------------------------

MonkeyParser::FactorOperatorContext::FactorOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MonkeyParser::FactorOperatorContext::STAR() {
  return getToken(MonkeyParser::STAR, 0);
}

tree::TerminalNode* MonkeyParser::FactorOperatorContext::SLASH() {
  return getToken(MonkeyParser::SLASH, 0);
}


size_t MonkeyParser::FactorOperatorContext::getRuleIndex() const {
  return MonkeyParser::RuleFactorOperator;
}


antlrcpp::Any MonkeyParser::FactorOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MonkeyParserVisitor*>(visitor))
    return parserVisitor->visitFactorOperator(this);
  else
    return visitor->visitChildren(this);
}

MonkeyParser::FactorOperatorContext* MonkeyParser::factorOperator() {
  FactorOperatorContext *_localctx = _tracker.createInstance<FactorOperatorContext>(_ctx, getState());
  enterRule(_localctx, 24, MonkeyParser::RuleFactorOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(136);
    _la = _input->LA(1);
    if (!(_la == MonkeyParser::SLASH
